@@ -1,17 +1,18 @@
 Version 3.1.1 To be released
 ============================
 BUG: Ticket#592 - TRadioButton with UniqueGroupName always return false to getChecked (Christophe)
+BUG: Ticket#648 - Validation: onClick and onBlur events order (Christophe)
 BUG: Ticket#656 - TDatePicker does not return correct value when in callback mode (Christophe)
 BUG: Ticket#662 - Ensure TForm to properly encode the ampersand in action URL (Qiang)
 BUG: Ticket#666 - TActiveRecord::deleteAll() method always requires a criteria or null parameter (Qiang)
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
-BUG: Ticket#648 - Validation: onClick and onBlur events order (Christophe)
 ENH: Ticket#577 - Added image button support for TPager (Qiang)
 ENH: Ticket#623 - TMemCache to support multiple servers (Carl)
 ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
 ENH: Ticket#678 - Improved DateTimeFormatInfo performance (Stever)
 ENH: Added THead requirement check (Qiang)
 CHG: GeSHi is replaced with Text_Highlighter (Christophe)
+CHG: Validators will not validate disabled controls (Qiang)
 NEW: Added TTabPanel (Qiang)
 NEW: Ticket#676 - Added primilary Oracle support (Christophe)
 NEW: Ticket#680 - Added TCacheHttpSession (Carl, Qiang)
